--- a/user_main_page.html
+++ b/user_main_page.html
@@ -2,14 +2,13 @@
 <html>
     <head>
         <title>Main Page</title>
-        <link rel="icon" type="image/png" href="Images/Logo.PNG">
+         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/navigation_menu.css">
         <link rel="stylesheet" href="css/footer_menu.css">
         <link rel="stylesheet" href="css/main_style.css">
         <link rel="stylesheet" href="css/Welcome_page.css">
         <link rel="stylesheet" href="css/sweetalert2.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="header">
@@ -17,7 +16,7 @@
                 <ul class="menu">
 
                     <li class="menu_item active">
-                        <a href="Welcome_page.html">Home</a>
+                        <a href="user_main_page.html">Main page</a>
                     </li>
     
                     <li class="menu_item">
