upload functions almost done

--- a/admin_update_products.html
+++ b/admin_update_products.html
@@ -50,9 +50,9 @@
 
          <div class="options-container">
                 <div class="options">
-                    <button class="delete-btn">Delete Products</button>
-                    <button class="update-url-btn">Update Products (URL)</button>
-                    <button class="upload-json-btn">Upload JSON File</button>
+                    <button id="deletebtn" class="delete-btn">Delete Products</button>
+                    <button id="updateurlbtn" class="update-url-btn">Update Products (URL)</button>
+                    <button id="uploadjsonbtn" class="upload-json-btn">Upload JSON File</button>
                 </div>
         </div>
             
@@ -70,7 +70,7 @@
     
     <script type="text/javascript" src="js/sweetalert2.min.js"></script>
     <script type="text/javascript" src="js/logout.js"></script>
-    <script type="text/javascript" src="js/initialize_map.js"></script>
     <script type="text/javascript" src="js/leaflet.js"></script>
     <script type="text/javascript" src="js/leaflet-search.min.js"></script>
+    <script type="text/javascript" src="js/admin_upload_actions.js"></script>
 </html>
