"Updated HTML, CSS, JS, and PHP files with various changes to navigation, styling, and functionality."

--- a/admin_update_products.html
+++ b/admin_update_products.html
@@ -37,11 +37,11 @@
           </li>
 
           <li class="menu_item">
-            <a href="resquers.html">Creation of resquers account</a>
+            <a href="admin_resquers.html">Creation of resquers account</a>
           </li>
 
           <li class="menu_item">
-            <a href="announcement.html">Announcements</a>
+            <a href="admin_announcements.html">Announcements</a>
           </li>
 
           <!--Logout option in navbar menu-->
