--- a/location_provide.html
+++ b/location_provide.html
@@ -7,15 +7,37 @@
     <!-- Include Leaflet CSS and JS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    
+    <link rel="stylesheet" href="css/sweetalert2.min.css">
+    <script src="js/sweetalert2.min.js"></script>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        #map {
+            height: 100%;
+            width: 100%;
+        }
+        #saveLocationBtn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
+            padding: 10px 20px;
+            background: white;
+            border: none;
+            cursor: pointer;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+        }
+    </style>
 </head>
 <body>
 
-<div id="map" style="height: 400px;"></div>
+<div id="map"></div>
 <button id="saveLocationBtn">Save Location</button>
 
-
-</body>
 <script type="text/javascript" src="js/location_provider.js"></script>
 
+</body>
 </html>
